--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p style="text-align:center"><span style="font-family:Times New Roman,Times,serif"><span style="font-size:48px"><span style="color:#000000">5</span><a href="https://google.com" style="text-decoration:none;"><span style="color:#000000">0</span></a><span style="color:#000000">2 Bad Gateway</span></span></span></p>
+<p style="text-align:center"><span style="font-family:Times New Roman,Times,serif"><span style="font-size:48px"><span style="color:#000000">5</span><a href="https://operator9487.github.io/blog/inner.html" style="text-decoration:none;"><span style="color:#000000">0</span></a><span style="color:#000000">2 Bad Gateway</span></span></span></p>
 
 <hr />
 <p style="text-align:center"><span style="color:#000000"><span style="font-size:16px">Loading Error : return&nbsp;Zero</span></span></p>
